[package]
name = "zenlog"
version = "0.1.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]

[dependencies]
rand = "0.3"
quick-error = "^1.0"
serde = "^0.7"
serde_json = "^0.7"
serde_yaml = "^0.2"
serde_macros = "*"

chan-signal = "*"
chrono = "*"
log = "*"
# clippy = "*"
mio = "*"
term = "*"
# hyper = "*"
# elastic_hyper = "*"
yaml-rust = "*"
peg = "=0.3.10"
rtfmt = { version = "^0.1", path = "../rtfmt" }

[build-dependencies]
syntex = "*"
